# Advent-of-Code-22

./: .pylintrc  README.md  pyproject.toml  template.py
days/1/: main.py
src/: functions.py  main.py
src/days/1/: main.py
src/days/10/: main.py
src/days/11/: functions.py  main.py
src/days/12/: main.py
src/days/2/: functions.py  main.py
src/days/3/: main.py
src/days/4/: functions.py  main.py
src/days/5/: main.py
src/days/6/: main.py
src/days/7/: main.py
src/days/8/: main.py
src/days/9/: main.py
